# egi-notebooks-accounting

./: .gitignore  .travis.yml  Dockerfile  README.md  build.sh  chartpress.yaml  index.html  index.yaml  notebooks-accounting-0.0.1-0.dev.git.1.h0113088.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h01d8579.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h049a380.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h12ef2fb.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h1b8d90a.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h2291c80.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h2808572.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h2c64212.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h489d0e4.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h6a69edf.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h7a61023.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h7cd8767.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h8ea285a.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h8fd0f10.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h97a28ce.tgz  notebooks-accounting-0.0.1-0.dev.git.1.h9ea7b02.tgz  notebooks-accounting-0.0.1-0.dev.git.1.ha807262.tgz  notebooks-accounting-0.0.1-0.dev.git.1.haff575b.tgz  notebooks-accounting-0.0.1-0.dev.git.1.hb394bc5.tgz  notebooks-accounting-0.0.1-0.dev.git.1.hc264956.tgz  notebooks-accounting-0.0.1-0.dev.git.1.he6d8547.tgz  notebooks-accounting-0.0.1-0.dev.git.1.he870929.tgz  notebooks-accounting-0.0.1-0.dev.git.1.hf932b12.tgz  notebooks-accounting-0.0.1-0.dev.git.1.hfda3c84.tgz  notebooks-accounting-0.1.1-0.dev.git.65.h7f13ecc.tgz  notebooks-accounting-0.1.1-0.dev.git.66.h841fa1c.tgz  notebooks-accounting-0.1.1-0.dev.git.67.h0fc5d35.tgz  notebooks-accounting-0.1.1-0.dev.git.68.h5b90cb6.tgz  notebooks-accounting-0.1.1-n019.hf3d1fdb.tgz  notebooks-accounting-0.1.1-n021.hfaae934.tgz  notebooks-accounting-0.1.1-n037.hbbcc02d.tgz  notebooks-accounting-0.1.2-0.dev.git.69.h11c8cc1.tgz  (+6 more)
.github/workflows/: chart.yml  chartpress.yml  flake8.yml  lint.yml  unittests.yml
accounting/: Dockerfile  requirements.txt  setup.cfg
accounting/egi_notebooks_accounting/: config.ini
chart/notebooks-accounting/: values.yaml
chart/notebooks-accounting/templates/: _helpers.tpl  accounting-config.yaml  dumper.yaml  pvc.yaml  rbac.yaml  secret.yaml  ssm-config.yaml
egi_notebook_accounting/: watch.py
egi_notebooks_accounting/: apel.py  config-tests.ini  config.ini  dump.py  eosc.py  import-apel.py  model.py  pods.py  prometheus.py  utils.py  watch.py
egi_notebooks_accounting/tests/: conftest.py  test_eosc.py
notebooks-accounting/: Chart.yaml  values.yaml
notebooks-accounting/templates/: NOTES.txt  _helpers.tpl  accounting-config.yaml  accounting-cronjob.yaml  dumper.yaml  eosc-cronjob.yaml  pvc.yaml  ssm-config.yaml  ssm-cronjob.yaml  ssm-secret.yaml  ssm.yaml  watcher.yaml
