[metadata]
name = egi_notebooks_accounting
summary = EGI Notebooks accounting plugin
description-file =
	README.md
author = Enol Fernandez
author-email = enol.fernandez@egi.eu
home-page =
classifier =
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: System :: Monitoring

[global]
setup-hooks =
	pbr.hooks.setup_hook

[files]
packages =
	egi_notebooks_accounting

[entry_points]
console_scripts =
	egi-notebooks-watcher = egi_notebooks_accounting.watch:main
	egi-notebooks-dumper = egi_notebooks_accounting.dump:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
