[metadata]
name = egi_notebooks_accounting
summary = EGI Notebooks accounting
description-file =
	README.md
# initial version: Enol Fernandez <enol.fernandez@egi.eu>
author = František Dvořák
author-email = valtri@civ.zcu.cz
home-page =
classifier =
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: System :: Monitoring

[global]
setup-hooks =
	pbr.hooks.setup_hook

[files]
packages =
	egi_notebooks_accounting

[entry_points]
console_scripts =
	egi-notebooks-accounting-dump = egi_notebooks_accounting.pods:main
	egi-notebooks-eosc-accounting = egi_notebooks_accounting.eosc:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[flake8]
max-line-length = 160
